# RAG-codebase

./: .env.example  .gitignore  README.md  RESULTS.md  outline.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
coderag/: __init__.py  cli.py  config.py  incremental.py  mcp_server.py  resilience.py  schema.py  tokenization.py
coderag/embed/: __init__.py  embedder.py
coderag/eval/: __init__.py  bootstrap.py  coderag_bench.py  codesearchnet.py  gen_metrics.py  metrics.py  run.py  scaffold.py
coderag/generate/: __init__.py  generator.py  prompts.py
coderag/graph/: __init__.py  code_graph.py  server.py  viz.py
coderag/index/: __init__.py  bm25_index.py  hnsw_store.py  store.py  vector_store.py
coderag/ingest/: __init__.py  chunker.py  discovery.py  grammars.py  languages.py
coderag/llm/: __init__.py  anthropic_client.py  base.py  deps.py  openai_client.py
coderag/retrieve/: __init__.py  rerank.py  retriever.py  routing.py
coderag/verify/: __init__.py  faithfulness.py
data/: cobra.jsonl  django.jsonl  golden_questions.jsonl
docs/: LEARN.md
scripts/: check_secrets.sh  coir_colab.py  demo.tape  exp_code_reranker.py  exp_levers.py  fetch_humaneval_bench.py  git_post_merge_reindex.sh  scaffold_golden.py
tests/: conftest.py  test_chunker.py  test_coderag_bench.py  test_codesearchnet.py  test_discovery.py  test_embedder_prefix.py  test_fusion.py  test_gen_metrics.py  test_generate.py  test_grammars.py  test_graph.py  test_graph_rerank.py  test_graph_retrieval.py  test_incremental.py  test_index.py  test_llm.py  test_llm_deps.py  test_llm_rerank.py  test_metrics.py  test_precise_languages.py  test_resilience.py  test_routing_repair.py  test_scaffold.py  test_tokenization.py  test_vector_store.py  test_verify.py  test_viz_edit.py
